--- a/code_signature.gni
+++ b/code_signature.gni
@@ -23,4 +23,5 @@ declare_args() {
   code_signature_support_openharmony_ca = true
   code_signature_support_oh_code_sign = false
   code_signature_enable_xpm_mode = false
+  code_signature_support_oh_release_app = true
 }
