代码签名仓独立编译修改
Signed-off-by: yang1946 <yuzhaoyang1@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -28,8 +28,12 @@ group("subcomponents") {
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_attr_utils:libcode_sign_attr_utils",
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk",
-    "${code_signature_root_dir}/services/key_enable:key_enable_targets",
     "${code_signature_root_dir}/services/local_code_sign:liblocal_code_sign",
     "${code_signature_root_dir}/services/local_code_sign:local_code_sign_configs",
   ]
+
+  if (!ohos_indep_compiler_enable) {
+    deps +=
+        [ "${code_signature_root_dir}/services/key_enable:key_enable_targets" ]
+  }
 }
