--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -41,7 +41,7 @@ ohos_shared_library("libcode_sign_utils") {
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
 
   deps = [ "${code_signature_root_dir}/utils:fsverity_sign_src_set" ]
-  if (host_os == "linux" && !is_asan) {
+  if (host_os == "linux" && !is_asan && !ohos_indep_compiler_enable) {
     deps += [ "${code_signature_root_dir}/services/key_enable:key_enable_lib" ]
   } else {
     sources += [ "${code_signature_root_dir}/services/key_enable/src/asan/disable_rust_interface.cpp" ]
