--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -98,6 +98,31 @@ ohos_unittest("local_code_sign_unittest") {
   ]
 }
 
+ohos_unittest("local_code_sign_utils_unittest") {
+  module_out_path = "security/code_signature"
+  resource_config_file = "resources/ohos_test.xml"
+  sources = [
+    "${code_signature_root_dir}/services/local_code_sign/src/local_sign_key.cpp",
+    "${code_signature_root_dir}/utils/src/cert_utils.cpp",
+    "local_code_sign_utils_test.cpp",
+  ]
+  deps = [ "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils" ]
+
+  include_dirs = [
+    "utils/include",
+    "${code_signature_root_dir}/services/local_code_sign/include",
+  ]
+
+  configs = [ "${code_signature_root_dir}:common_utils_config" ]
+  external_deps = [
+    "c_utils:utils",
+    "fsverity-utils:libfsverity_utils",
+    "hilog:libhilog",
+    "huks:libhukssdk",
+    "openssl:libcrypto_shared",
+  ]
+}
+
 ohos_unittest("sign_and_enforce_unittest") {
   module_out_path = "security/code_signature"
   resource_config_file = "resources/ohos_test.xml"
@@ -222,6 +247,7 @@ group("unittest_group") {
       ":code_sign_utils_unittest",
       ":enable_verity_ioctl_unittest",
       ":local_code_sign_unittest",
+      ":local_code_sign_utils_unittest",
       ":multi_thread_local_sign_unittest",
       ":rust_key_enable_unittest",
       ":sign_and_enforce_unittest",
