--- a/code_signature.gni
+++ b/code_signature.gni
@@ -24,4 +24,9 @@ declare_args() {
   code_signature_support_oh_code_sign = false
   code_signature_enable_xpm_mode = false
   code_signature_support_oh_release_app = true
+  code_signature_screenlock_mgr_enable = false
+  if (defined(global_parts_info) &&
+      defined(global_parts_info.theme_screenlock_mgr)) {
+    code_signature_screenlock_mgr_enable = true
+  }
 }
