--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -50,7 +50,7 @@ ohos_shared_library("libcode_sign_utils") {
   if (code_signature_support_oh_code_sign) {
     defines += [ "SUPPORT_OH_CODE_SIGN" ]
   }
-  if (build_variant == "root" || !code_signature_enable_xpm_mode) {
+  if (build_variant == "root" || code_signature_enable_xpm_mode == 0) {
     defines += [ "SUPPORT_PERMISSIVE_MODE" ]
   }
   external_deps = [
