--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -105,10 +105,13 @@ ohos_unittest("local_code_sign_utils_unittest") {
     "${code_signature_root_dir}/services/local_code_sign/src/local_sign_key.cpp",
     "${code_signature_root_dir}/utils/src/cert_utils.cpp",
     "local_code_sign_utils_test.cpp",
+    "mock/src/hks_api.cpp",
+    "mock/src/hks_api_mock_helper.cpp",
   ]
   deps = [ "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils" ]
 
   include_dirs = [
+    "mock/include",
     "utils/include",
     "${code_signature_root_dir}/services/local_code_sign/include",
   ]
