add cfi for jit code signing
Signed-off-by: lihehe <lihehao@huawei.com>
Change-Id: Ic48e6268ace328ada18ffa65f699aaf8c8de90a1

--- a/interfaces/innerkits/jit_code_sign/BUILD.gn
+++ b/interfaces/innerkits/jit_code_sign/BUILD.gn
@@ -34,6 +34,11 @@ ohos_shared_library("libjit_code_sign") {
       "src/pac_sign_ctx.cpp",
     ]
   }
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
   public_configs = [
     ":public_jit_code_sign_configs",
     "${code_signature_root_dir}:common_public_config",
