--- a/services/key_enable/utils/BUILD.gn
+++ b/services/key_enable/utils/BUILD.gn
@@ -17,6 +17,7 @@ import("../../../code_signature.gni")
 ohos_static_library("libkey_enable_utils") {
   sources = [
     "src/cert_path.cpp",
+    "src/devices_security.cpp",
     "src/key_enable_adapter.cpp",
     "src/key_utils.cpp",
     "src/unlock_event_helper.cpp",
