disable jit code signing in emulator
Signed-off-by: lihehe <lihehao@huawei.com>
Change-Id: I535ed2f5a1b38a85b40bd388314db67647cf0348

--- a/code_signature.gni
+++ b/code_signature.gni
@@ -33,6 +33,6 @@ declare_args() {
 }
 
 if (defined(target_cpu) && target_cpu == "arm64" &&
-    code_signature_support_oh_code_sign) {
+    code_signature_support_oh_code_sign && !is_emulator) {
   jit_code_sign_enable = true
 }
