--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -63,6 +63,24 @@ ohos_unittest("code_sign_utils_unittest") {
   ]
 }
 
+ohos_unittest("code_sign_utils_in_c_unittest") {
+  module_out_path = "security/code_signature"
+  resource_config_file = "resources/ohos_test.xml"
+  sources = [ "code_sign_utils_in_c_test.cpp" ]
+
+  deps = [ "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils" ]
+
+  include_dirs = [
+    "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
+    "${code_signature_root_dir}/utils/include",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+}
+
 ohos_unittest("local_code_sign_unittest") {
   sanitize = {
     cfi = true
@@ -269,6 +287,7 @@ group("unittest_group") {
   if (!defined(ohos_lite)) {
     deps = [
       ":add_cert_path_unittest",
+      ":code_sign_utils_in_c_unittest",
       ":code_sign_utils_unittest",
       ":enable_verity_ioctl_unittest",
       ":local_code_sign_unittest",
