enable keys for rddevice
Change-Id: I1845e920917a506381253e4398db9a0570bf87bc
Signed-off-by: lihehe <lihehao@huawei.com>

--- a/code_signature.gni
+++ b/code_signature.gni
@@ -23,7 +23,7 @@ declare_args() {
   code_signature_support_openharmony_ca = true
   code_signature_support_oh_code_sign = false
   code_signature_enable_xpm_mode = 0
-  code_signature_support_oh_release_app = true
+  code_signature_support_oh_release_app = false
   code_signature_screenlock_mgr_enable = false
   if (defined(global_parts_info) &&
       defined(global_parts_info.theme_screenlock_mgr)) {
