--- a/services/key_enable/cfg/enable_xpm/level3/key_enable.cfg
+++ b/services/key_enable/cfg/enable_xpm/level3/key_enable.cfg
@@ -3,12 +3,12 @@
             "name" : "post-fs-data",
             "cmds" : [
                 "write /proc/sys/fs/verity/require_signatures 1",
-                "mkdir /data/service/el0/profiles 0655 installs installs",
-                "mkdir /data/service/el0/profiles/developer 0655 installs installs",
-                "mkdir /data/service/el0/profiles/debug 0655 installs installs"
+                "mkdir /data/service/el1/profiles 0655 installs installs",
+                "mkdir /data/service/el1/profiles/release 0655 installs installs",
+                "mkdir /data/service/el1/profiles/debug 0655 installs installs"
             ]
         }, {
-            "name" : "init",
+            "name" : "late-fs",
             "cmds" : [
                 "start key_enable"
             ]
