编译隔离DT用例
Signed-off-by: zhenghui <zhenghui25@huawei.com>

--- a/interfaces/innerkits/code_sign_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_utils/BUILD.gn
@@ -42,7 +42,8 @@ ohos_shared_library("libcode_sign_utils") {
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
 
   deps = [ "${code_signature_root_dir}/utils:fsverity_sign_src_set" ]
-  if (host_os == "linux" && !is_asan && !ohos_indep_compiler_enable) {
+  if (host_os == "linux" && !is_asan && !ohos_indep_compiler_enable &&
+      !use_clang_coverage) {
     deps += [ "${code_signature_root_dir}/services/key_enable:key_enable_lib" ]
   } else {
     sources += [ "${code_signature_root_dir}/services/key_enable/src/asan/disable_rust_interface.cpp" ]
