duration when profiles accessable
Signed-off-by: yeyuning <yeyuning2@huawei.com>
Change-Id: I270ea1f49e7eef1456f8cdc5b5590ed3cefceb78

--- a/services/key_enable/cfg/disable_xpm/key_enable.cfg
+++ b/services/key_enable/cfg/disable_xpm/key_enable.cfg
@@ -8,7 +8,7 @@
                 "mkdir /data/service/el1/profiles/debug 0655 installs installs"
             ]
         }, {
-            "name" : "late-fs",
+            "name" : "init",
             "cmds" : [
                 "start key_enable"
             ]
