--- a/services/key_enable/cfg/enable_xpm/level5/key_enable.cfg
+++ b/services/key_enable/cfg/enable_xpm/level5/key_enable.cfg
@@ -8,7 +8,7 @@
                 "mkdir /data/service/el1/profiles/debug 0655 installs installs"
             ]
         }, {
-            "name" : "late-fs",
+            "name" : "init",
             "cmds" : [
                 "start key_enable"
             ]
