--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -83,6 +83,10 @@ ohos_unittest("code_sign_attr_utils_unittest") {
 
   deps = [ "${code_signature_root_dir}/interfaces/innerkits/code_sign_attr_utils:libcode_sign_attr_utils" ]
 
+  if(is_asan && !use_clang_coverage){
+    defines = [ "NO_USE_CLANG_COVERAGE" ]
+  }
+
   include_dirs = [
     "utils/include",
     "${code_signature_root_dir}/interfaces/innerkits/common/include",
