--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -64,6 +64,10 @@ ohos_unittest("code_sign_utils_unittest") {
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils:libcode_sign_utils",
   ]
 
+  if (!is_asan && !use_clang_coverage) {
+    defines = [ "NO_USE_CLANG_COVERAGE" ]
+  }
+
   include_dirs = [
     "utils/include",
     "${code_signature_root_dir}/interfaces/innerkits/code_sign_utils/include",
@@ -82,10 +86,6 @@ ohos_unittest("code_sign_attr_utils_unittest") {
   sources = [ "code_sign_attr_utils_test.cpp" ]
 
   deps = [ "${code_signature_root_dir}/interfaces/innerkits/code_sign_attr_utils:libcode_sign_attr_utils" ]
-
-  if(is_asan && !use_clang_coverage){
-    defines = [ "NO_USE_CLANG_COVERAGE" ]
-  }
 
   include_dirs = [
     "utils/include",
