Xpm: set special ownerid for allowed app Signed-off-by: luyifan<842825214@qq.com>

--- a/interfaces/innerkits/code_sign_attr_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_attr_utils/BUILD.gn
@@ -19,7 +19,10 @@ config("public_attr_utils_configs") {
 }
 
 ohos_static_library("libcode_sign_attr_utils") {
-  sources = [ "src/code_sign_attr_utils.c" ]
+  sources = [
+    "src/code_sign_attr_utils.c",
+    "src/ownerid_utils.cpp",
+  ]
 
   configs = [
     ":public_attr_utils_configs",
