Enable jitfort when xpm_mode is 4/5 Signed-off-by: luyifan<842825214@qq.com>

--- a/services/key_enable/cfg/enable_xpm/level5/key_enable.cfg
+++ b/services/key_enable/cfg/enable_xpm/level5/key_enable.cfg
@@ -15,7 +15,8 @@
         }, {
             "name" : "pre-init",
             "cmds" : [
-                "write /proc/sys/kernel/xpm/xpm_mode 5"
+                "write /proc/sys/kernel/xpm/xpm_mode 5",
+                "write /proc/sys/kernel/jitfort/jitfort_mode 1"
             ]
         }
     ],
