--- a/services/key_enable/cfg/enable_xpm/level4/key_enable.cfg
+++ b/services/key_enable/cfg/enable_xpm/level4/key_enable.cfg
@@ -15,7 +15,8 @@
         }, {
             "name" : "pre-init",
             "cmds" : [
-                "write /proc/sys/kernel/xpm/xpm_mode 4"
+                "write /proc/sys/kernel/xpm/xpm_mode 4",
+                "write /proc/sys/kernel/jitfort/jitfort_mode 1"
             ]
         }
     ],
