check tempAllowList under secure shield mode
Signed-off-by: luyifan<842825214@qq.com>

--- a/interfaces/innerkits/code_sign_attr_utils/BUILD.gn
+++ b/interfaces/innerkits/code_sign_attr_utils/BUILD.gn
@@ -35,6 +35,7 @@ ohos_static_library("libcode_sign_attr_utils") {
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
+    "init:libbegetutil",
   ]
 
   part_name = "code_signature"
