--- a/code_signature.gni
+++ b/code_signature.gni
@@ -24,6 +24,7 @@ declare_args() {
   code_signature_support_oh_code_sign = false
   code_signature_enable_xpm_mode = 0
   code_signature_support_oh_release_app = false
+  code_signature_support_app_allow_list = false
   code_signature_screenlock_mgr_enable = false
   if (defined(global_parts_info) &&
       defined(global_parts_info.theme_screenlock_mgr)) {
