--- a/services/key_enable/cfg/enable_xpm/level4/key_enable.cfg
+++ b/services/key_enable/cfg/enable_xpm/level4/key_enable.cfg
@@ -3,19 +3,20 @@
             "name" : "post-fs-data",
             "cmds" : [
                 "write /proc/sys/fs/verity/require_signatures 1",
-                "mkdir /data/service/el1/profiles 0655 installs installs",
-                "mkdir /data/service/el1/profiles/release 0655 installs installs",
-                "mkdir /data/service/el1/profiles/debug 0655 installs installs"
+                "mkdir /data/service/el1/public/profiles 0655 installs installs",
+                "mkdir /data/service/el1/public/profiles/release 0655 installs installs",
+                "mkdir /data/service/el1/public/profiles/debug 0655 installs installs"
             ]
         }, {
-            "name" : "late-fs",
+            "name" : "init",
             "cmds" : [
                 "start key_enable"
             ]
         }, {
             "name" : "pre-init",
             "cmds" : [
-                "write /proc/sys/kernel/xpm/xpm_mode 4"
+                "write /proc/sys/kernel/xpm/xpm_mode 4",
+                "write /proc/sys/kernel/jitfort/jitfort_mode 1"
             ]
         }
     ],
