--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -47,10 +47,10 @@ ohos_unittest("add_cert_path_unittest") {
     "${code_signature_root_dir}:common_utils_config",
     "${code_signature_root_dir}:common_public_config",
   ]
-  deps = [ "${selinux_dir}:libselinux" ]
   external_deps = [
     "hilog:libhilog",
     "init:libbegetutil",
+    "selinux:libselinux",
   ]
 }
 
@@ -331,11 +331,11 @@ ohos_unittest("enable_verity_ioctl_unittest") {
   deps = [
     ":key_enable_src_set",
     "${code_signature_root_dir}/interfaces/inner_api/code_sign_attr_utils:libcode_sign_attr_utils",
-    "${selinux_dir}:libselinux",
   ]
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
+    "selinux:libselinux",
   ]
 }
 
