--- a/interfaces/inner_api/jit_code_sign/BUILD.gn
+++ b/interfaces/inner_api/jit_code_sign/BUILD.gn
@@ -48,14 +48,10 @@ ohos_source_set("pac_sign_feature") {
 }
 
 ohos_shared_library("libjit_code_sign") {
-  sources = [ "src/jit_code_signer_factory.cpp" ]
+  sources = [ ]
   if (jit_code_sign_enable) {
     defines = [ "JIT_CODE_SIGN_ENABLE" ]
-    sources += [
-      "src/jit_code_signer_base.cpp",
-      "src/jit_code_signer_hybrid.cpp",
-      "src/jit_code_signer_single.cpp",
-    ]
+    sources += [ "src/jit_code_signer.cpp" ]
     deps = [ ":pac_sign_feature" ]
   }
   cflags_cc = [
